--- a/src/styles/question.scss
+++ b/src/styles/question.scss
@@ -3,9 +3,19 @@
   border-radius: 8px;
   box-shadow: 0 2px 12px rgba(0, 0, 0, 0.04);
   padding: 24px;
+  margin-bottom: 8px;
+  
+  &.answered {
+    background: #DBDCDD;
+  }
+  
+  &.highlighted {
+    background: #F4F0FF;
+    border: 1px solid #835afd;
 
-  & + .question {
-    margin-top: 8px;
+    footer div span {
+      color: #29292E;
+    }
   }
 
   p {
@@ -35,17 +45,23 @@
       }
     }
 
-    button {
+    div button {
       border: 0;
       background: transparent;
       cursor: pointer;
       transition: filter 0.2s;
+
+      & + button {
+        margin-left: 1rem;
+      }
 
       &.like-button {
         display: flex;
         align-items: flex-end;
         color: #737380;
         gap: 8px;
+
+      }
 
         &.liked {
           color: #835afd;
@@ -54,11 +70,9 @@
             stroke: #835afd;
           }
         }
-      }
 
-      &:hover {
-          filter: brightness(0.7)
-
+        &:hover {
+          filter: brightness(0.7);
       }
     }
   }
