--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -2,8 +2,11 @@
     display: flex;
     align-items: center;
     height: 100vh;
+    width: 100vw;
 
     aside {
+        height: 100vh;
+        width: 100vw;
         flex: 7;
     
         background: #835afd;
