add colored icons when hovering in the admin room

--- a/src/components/Question/styles.scss
+++ b/src/components/Question/styles.scss
@@ -72,7 +72,24 @@
         }
 
         &:hover {
-          filter: brightness(0.7);
+          
+      }
+    }
+
+    .buttons {
+      #delete-svg:hover {
+        path {
+          stroke: #E73F5D;
+        }
+      }
+
+      #highlight-svg:hover {
+        path {
+          stroke: #835AFD;
+        }
+      }
+      #check-svg:hover {
+        filter: brightness(0.7);
       }
     }
   }
