--- a/src/components/RoomCode/styles.scss
+++ b/src/components/RoomCode/styles.scss
@@ -1,10 +1,11 @@
 .room-code {
     height: 40px;
-    border-radius: 8px;
+    border-radius: 0;
     overflow: hidden;
 
     background: #FFF;
     border: 1px solid #835afd;
+    border-radius: 0.4rem;
     cursor: pointer;
 
     display: flex;
@@ -12,8 +13,8 @@
     div {
         height: 100%;
         background: #835afd;
-        padding: 0 12px;
         display: flex;
+        padding: 0 12px;
         justify-content: center;
         align-items: center;
     }
