align itens on header and added svg icon on home button

--- a/src/pages/Room/styles.scss
+++ b/src/pages/Room/styles.scss
@@ -8,12 +8,16 @@
             margin: 0 auto;
             display: flex;
             justify-content: space-between;
-            align-items: center;
-            align-content: center;
 
-            > a img {
+            > a {
+                margin-top: 1px;
+                display: flex;
+                align-items: center;
+
+                img {
                 max-height: 45px;
                 cursor: pointer;
+                }
             }
 
             > div {
