--- a/src/styles/auth.scss
+++ b/src/styles/auth.scss
@@ -73,6 +73,10 @@
 
             button {
                 margin-top: 16px;
+
+                span {
+                    display: flex;
+                }
             }
 
             button, input {
